[project]
name = "AutoEncoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.0+cu118",
    "torchvision",
    "torchaudio",
    "matplotlib>=3.10.8",
]

[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" }
]
torchvision = [
  { index = "pytorch-cu118" }
]
torchaudio = [
  { index = "pytorch-cu118" }
]
